[package]
name = "grpc-jwt-tonic"
version = "0.1.0"
edition = "2024"
authors = ["Dmitrii <sexykdi@gmail.com>"]
description = "JWT authentication and authorization middleware for servers in Rust + Tonic ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LdDl/grpc-jwt-tonic"
homepage = "https://github.com/LdDl/grpc-jwt-tonic"
documentation = "https://docs.rs/grpc-jwt-tonic"
readme = "README.md"
keywords = ["grpc", "jwt", "authentication", "tonic", "middleware"]
categories = ["authentication", "web-programming", "network-programming"]
build = "src/build.rs"

[dependencies]
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
prost = "0.14.1"
prost-types = "0.14.1"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.1"