[package]
name = "grpc-jwt-client-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
grpc-jwt-tonic = { path = "../.." }
tonic = { version = "0.14.1", features = ["transport"] }
tonic-prost = "0.14.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
prost = "0.14.1"
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = "0.14.1"
prost-build = "0.14.1"